--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -27,9 +27,10 @@ div.key a.remove_key {
 	border-width: 1px;
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
-	padding: 5px;
 	display: inline-block;
-	width: 20px;
+	height: 20px;
+	vertical-align: middle;
+	padding: 3px;
 	cursor: pointer;
 }
 
@@ -39,8 +40,20 @@ div.key a.key_name {
 	border-width: 1px;
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
-	padding: 5px;
 	display: inline-block;
-	width: calc(100% - 43px);
+	width: calc(100% - 36px);
+	height: 20px;
+	vertical-align: middle;
+	padding: 3px;
 	cursor: pointer;
+}
+
+div.key a.key_name i#key_status {
+	float: right;
+	color: red;
+}
+
+p#progress {
+	position: fixed;
+	bottom: 0;
 }
